# Battleship

./: .clangd  .gitignore  README.md  docker-compose.yml
backend/: CMakeLists.txt  main.cpp
backend/include/: crow.h  json_serializer.h
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/scripts/: start-backend.js
frontend/src/: App.tsx  index.css
frontend/src/components/: CursorDiv.module.css  CursorDiv.tsx  GameBoard.module.css  GameBoard.tsx
frontend/src/contexts/: AppContext.tsx
frontend/src/pages/: BuildShip.module.css  BuildShip.tsx  CreateGame.module.css  CreateGame.tsx  ErrorPage.css  ErrorPage.tsx  GamePage.module.css  GamePage.tsx  JoinGame.module.css  JoinGame.tsx  main.module.css  main.tsx
frontend/src/service/: GameWebSocket.ts
frontend/src/types/: serverMessages.ts
